# pytorch-sandbox

./: .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yml  environment.yml  mnist.py  mnist_demo.py  mnist_train.py  pyproject.toml  setup.py
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: pre-commit.yml  pytest.yml
data/: data_loading.py  mnist.py  mnist_data.py
docker/mlflow/: Dockerfile  pyproject.toml
docker/mlflow-server/: Dockerfile
docker/mnist-train/: Dockerfile
docker/postgres/: init.sql
docker/postgres-server/: Dockerfile
model/: cnn.py
pytorch_sandbox/: mnist_demo.py  mnist_train.py
pytorch_sandbox/data/: data_loading.py  mnist_data.py
pytorch_sandbox/intro/: celcius.py
pytorch_sandbox/model/: cnn.py
scripts/: docker-check.sh
src/xyz/pytorch/sandbox/: mnist_demo.py  mnist_train.py
src/xyz/pytorch/sandbox/data/: data_loading.py  mnist_data_test.py
src/xyz/pytorch/sandbox/intro/: celcius.py  celsius.py  temperature.py
src/xyz/pytorch/sandbox/mnist/: demo.py  train.py
src/xyz/pytorch/sandbox/mnist/data/: __init__.py  _data.py  _data_test.py  loading.py
src/xyz/pytorch/sandbox/model/: cnn_test.py
